fixed header and footer alignment

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html {
 header {
     display: grid;
     grid-template-columns: 80% 20%;
-    align-items: center;
+    align-content: center;
     position: fixed;    
     width: 100%;
     height: 75px;
@@ -83,7 +83,7 @@ li {
 footer {
     display: grid;
     grid-template-columns: 80% 20%;
-    align-items: center;   
+    align-content: center;   
     width: 100%;
     height: 75px;
     background-color: #ff0000;
